--- a/MMHS_Event_App/Base.lproj/Main.storyboard
+++ b/MMHS_Event_App/Base.lproj/Main.storyboard
@@ -448,14 +448,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eventImage" translatesAutoresizingMaskIntoConstraints="NO" id="dm2-gw-1Sp" customClass="BlurredImageView" customModule="MMHS_Event_App" customModuleProvider="target">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="eventImage" translatesAutoresizingMaskIntoConstraints="NO" id="dm2-gw-1Sp" customClass="BlurredImageView" customModule="MMHS_Event_App" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="320" id="4FW-Ql-NQH"/>
-                                    <constraint firstAttribute="height" constant="320" id="p1e-ej-Y2e"/>
-                                </constraints>
                             </imageView>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceHorizontal="YES" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="81e-O9-rnC">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceHorizontal="YES" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="81e-O9-rnC">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HxV-lH-BcO" userLabel="View1">
@@ -497,30 +493,30 @@
                             <pageControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="2" translatesAutoresizingMaskIntoConstraints="NO" id="dVd-SX-fFA">
                                 <rect key="frame" x="140" y="287" width="39" height="37"/>
                             </pageControl>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="320" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Gcl-mR-FSJ">
-                                <rect key="frame" x="0.0" y="322" width="320" height="278"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="153" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="hHd-df-F2K">
+                                <rect key="frame" x="0.0" y="328" width="600" height="272"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="320" id="YL9-En-n4N" customClass="ProfileTableViewCell" customModule="MMHS_Event_App" customModuleProvider="target">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="320" id="3Xj-i7-g7q" customClass="ProfileTableViewCell" customModule="MMHS_Event_App" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="YL9-En-n4N" id="LMa-aH-WfZ">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3Xj-i7-g7q" id="8M4-73-bJI">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dj9-iF-urW">
-                                                    <rect key="frame" x="0.0" y="-8" width="600" height="321"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VmM-Lh-ofq">
+                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="389.5"/>
                                                 </imageView>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="profilePic" translatesAutoresizingMaskIntoConstraints="NO" id="w1k-sh-IG5">
-                                                    <rect key="frame" x="13" y="110" width="100" height="100"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hqe-ls-3th">
+                                                    <rect key="frame" x="8" y="99" width="100" height="100"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Date Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WOm-IE-p2M">
-                                                    <rect key="frame" x="144" y="170" width="216" height="34"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1XW-WR-qyh">
+                                                    <rect key="frame" x="203" y="99" width="42" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aVe-dR-u2g">
-                                                    <rect key="frame" x="144" y="125" width="216" height="37"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QwQ-g2-38r">
+                                                    <rect key="frame" x="203" y="138" width="42" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
@@ -528,25 +524,20 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="dateLabel" destination="WOm-IE-p2M" id="WdY-pG-Kwk"/>
-                                            <outlet property="eventImageView" destination="dj9-iF-urW" id="Mg1-SF-Okk"/>
-                                            <outlet property="eventLabel" destination="WOm-IE-p2M" id="hfY-Yy-XgB"/>
-                                            <outlet property="titleLabel" destination="aVe-dR-u2g" id="SDD-w4-Lhr"/>
-                                            <outlet property="userImageView" destination="w1k-sh-IG5" id="5Eo-4l-ZWC"/>
+                                            <outlet property="dateLabel" destination="QwQ-g2-38r" id="gcw-h1-me7"/>
+                                            <outlet property="eventImageView" destination="VmM-Lh-ofq" id="2JN-eg-2tc"/>
+                                            <outlet property="titleLabel" destination="1XW-WR-qyh" id="Ngl-lB-kqa"/>
+                                            <outlet property="userImageView" destination="hqe-ls-3th" id="das-Qx-rFa"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="9fn-GX-EyB" id="oej-TO-3cb"/>
+                                    <outlet property="delegate" destination="9fn-GX-EyB" id="Qdc-s8-J7L"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="dm2-gw-1Sp" firstAttribute="top" secondItem="UtD-wN-p4h" secondAttribute="topMargin" id="E2L-VT-AjO"/>
-                            <constraint firstItem="dm2-gw-1Sp" firstAttribute="leading" secondItem="UtD-wN-p4h" secondAttribute="leadingMargin" constant="-16" id="TMX-VI-UOK"/>
-                            <constraint firstItem="Gcl-mR-FSJ" firstAttribute="leading" secondItem="UtD-wN-p4h" secondAttribute="leadingMargin" constant="-16" id="U4U-iU-kbE"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Gcl-mR-FSJ" secondAttribute="trailing" constant="264" id="Y95-v8-qNx"/>
-                            <constraint firstItem="Gcl-mR-FSJ" firstAttribute="bottom" secondItem="UtD-wN-p4h" secondAttribute="bottomMargin" id="ZXJ-f9-XXc"/>
-                            <constraint firstItem="Gcl-mR-FSJ" firstAttribute="top" secondItem="81e-O9-rnC" secondAttribute="bottom" constant="2" id="rcV-jB-pa3"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="hFb-s5-Std">
                         <barButtonItem key="rightBarButtonItem" systemItem="edit" id="cmP-Zc-wUf">
@@ -563,6 +554,7 @@
                         <outlet property="pageControl" destination="dVd-SX-fFA" id="uht-sE-w5g"/>
                         <outlet property="profileImageView" destination="5Qf-Em-Gbt" id="JBW-vG-oiq"/>
                         <outlet property="scrollView" destination="81e-O9-rnC" id="qiV-1I-PIg"/>
+                        <outlet property="tableView" destination="hHd-df-F2K" id="fhP-3h-cjE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CKT-Tr-FKn" userLabel="First Responder" sceneMemberID="firstResponder"/>
