--- a/MMHS_Event_App/Base.lproj/Main.storyboard
+++ b/MMHS_Event_App/Base.lproj/Main.storyboard
@@ -39,7 +39,7 @@
                                                     <rect key="frame" x="0.0" y="192" width="320" height="128"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vDJ-bp-ULM">
-                                                            <rect key="frame" x="113" y="44" width="205" height="27"/>
+                                                            <rect key="frame" x="108" y="44" width="205" height="27"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="205" id="ttX-3V-9RW"/>
                                                                 <constraint firstAttribute="height" constant="27" id="u3i-uR-Fkf"/>
@@ -48,13 +48,13 @@
                                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cOb-NH-1NY">
-                                                            <rect key="frame" x="111" y="79" width="210" height="23"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Date label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cOb-NH-1NY">
+                                                            <rect key="frame" x="107" y="79" width="210" height="23"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="23" id="YfX-n7-eBp"/>
                                                                 <constraint firstAttribute="width" constant="210" id="bU0-oO-G1b"/>
                                                             </constraints>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
@@ -63,8 +63,8 @@
                                                     <constraints>
                                                         <constraint firstAttribute="bottom" secondItem="cOb-NH-1NY" secondAttribute="bottom" constant="26" id="Cdf-Sv-xtw"/>
                                                         <constraint firstAttribute="width" constant="320" id="FUR-Vx-Z9V"/>
-                                                        <constraint firstItem="cOb-NH-1NY" firstAttribute="leading" secondItem="o6t-dh-r7x" secondAttribute="leading" constant="111" id="Mvz-9M-R0y"/>
-                                                        <constraint firstItem="vDJ-bp-ULM" firstAttribute="leading" secondItem="o6t-dh-r7x" secondAttribute="leading" constant="113" id="U1X-P5-8mk"/>
+                                                        <constraint firstItem="cOb-NH-1NY" firstAttribute="leading" secondItem="o6t-dh-r7x" secondAttribute="leading" constant="106" id="Mvz-9M-R0y"/>
+                                                        <constraint firstItem="vDJ-bp-ULM" firstAttribute="leading" secondItem="o6t-dh-r7x" secondAttribute="leading" constant="108" id="U1X-P5-8mk"/>
                                                         <constraint firstAttribute="height" constant="128" id="Wox-TO-Hji"/>
                                                         <constraint firstItem="cOb-NH-1NY" firstAttribute="top" secondItem="vDJ-bp-ULM" secondAttribute="bottom" constant="8" id="yXt-oR-0qV"/>
                                                     </constraints>
@@ -165,9 +165,9 @@
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="agt-NX-Ril">
-                                                    <rect key="frame" x="66" y="361" width="130" height="19"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="agt-NX-Ril">
+                                                    <rect key="frame" x="66" y="361" width="184" height="19"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
